Fixed CMS Logos Layout on Mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2307,6 +2307,7 @@ a:hover {
 	.gyms-row {
 		margin: 0 10px;
 	}
+
 }
 
 /* UTILS */
@@ -2587,6 +2588,13 @@ section .topic {
 .cms-logo {
 	max-height: 90px;
 	display: inline-block;
+}
+
+@media only screen and (max-width: 767px)  {
+	.cms-logo {
+		max-height: 60px;
+		max-width: 250px;
+	}
 }
 
 .integration-method {
